[gd_scene load_steps=10 format=3 uid="uid://eq8fe48g3uch"]

[ext_resource type="Script" uid="uid://dwggmve0otlal" path="res://addons/agent/ui/history/history_message_item.gd" id="1_56ktc"]
[ext_resource type="Texture2D" uid="uid://bj6c0vfw4s6an" path="res://addons/agent/icons/newicon/icon_reason.svg" id="2_r1w1x"]
[ext_resource type="Texture2D" uid="uid://b2el7xc75pfe7" path="res://addons/agent/icons/newicon/Icon_bin.svg" id="4_r1w1x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bms8g"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r1w1x"]

[sub_resource type="LabelSettings" id="LabelSettings_35iu3"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_hd88h"]
font_size = 12
font_color = Color(0.7647059, 0.7647059, 0.7647059, 0.5254902)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_udg46"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3gls"]
bg_color = Color(0.2627451, 0.16862746, 0.13725491, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.49019608, 0.22745098, 0.13725491, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="HistoryMessageItem" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 29.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bms8g")
script = ExtResource("1_56ktc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_r1w1x")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("2_r1w1x")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="HistoryMessageTitle" type="Label" parent="HBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Title"
label_settings = SubResource("LabelSettings_35iu3")
clip_text = true
text_overrun_behavior = 3

[node name="HistoryMessageTime" type="Label" parent="HBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Time"
label_settings = SubResource("LabelSettings_hd88h")

[node name="RecoveryButton" type="Button" parent="HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "恢复记录"
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_udg46")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonContainer" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r3gls")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ButtonContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ButtonContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
texture = ExtResource("4_r1w1x")
expand_mode = 1
stretch_mode = 5

[node name="DeleteButton" type="Button" parent="HBoxContainer/ButtonContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "删除记录"
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_udg46")
flat = true
icon_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/PanelContainer/RecoveryButton" to="." method="_on_recovery_button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/PanelContainer/RecoveryButton" to="." method="_on_recovery_button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/RecoveryButton" to="." method="_on_recovery_button_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/ButtonContainer/PanelContainer/DeleteButton" to="." method="_on_delete_button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ButtonContainer/PanelContainer/DeleteButton" to="." method="_on_delete_button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/PanelContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
